# rust_authentication

./: .gitignore  Cargo.toml  README.md  cap.session.sql  docker-compose.yaml  insomina_config.json  insomnia-document.json
.github/workflows/: build.yml  lint.yml  test.yml
migrations/2023-04-23-001224_everything/: down.sql  up.sql
src/: authentication.rs  db.rs  lib.rs  main.rs  new.sql  pages.rs  schema.rs  test.rs
src/auth/: authentication.rs  keyring.rs  mod.rs
